# fleet-monitor

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: pipeline.yml
core/: config.py  errors.py  logger.py
data/standards/: cf-config.yml
projects/fleet_monitoring/: .dockerignore  Dockerfile  README.md  analytics_health.py  analytics_map.py  analytics_pull.py  analyze.py  baselines.py  cf_api.py  cf_per_site.py  collect.py  cost.py  cron.py  cycle.py  digest.py  docker-compose.yml  effectiveness.py  fleet_db.py  interventions.py  lifecycle.py  models.py  mutes.py  overlay.py  plan_config.py  plan_utilization.py  probes.py  r2_state.py  render.py  render_console.py  render_pipeline.py  render_site.py  requirements.txt  roster.py  run-daily.cmd  run.py  serve.py  timeseries.py  wpe_api.py
scripts/: monitor_r2_health.py
skills/analytics/: SKILL.md  __init__.py  discover.py  ga4_pull.py  gsc_pull.py  oauth.py  pull.py  query.py  views.sql
skills/cloudflare/: SKILL.md  _resolve.py  audit_config.py  bot_analysis.py  check_traffic_geography.py  check_waf.py  client.py  dns_check.py  o2o_verify.py  purge_cache.py  push_country_challenge.py  push_scanner_allowlist.py  push_validator_allowlist.py  security_headers.py  setup_ai_search.py  setup_o2o_waf.py  wpe_crossref.py  zone_inventory.py
skills/wpengine/: ssh.py
tests/fleet_monitoring/: conftest.py  test_analytics_health.py  test_analytics_map.py  test_analytics_pull.py  test_analyze.py  test_baselines.py  test_cf_api.py  (+50 more)
worker/: deploy.md  package.json  tsconfig.json  wrangler.toml
(+64 files in other folders)
