[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fleet-monitor"
version = "1.0.0"
description = "Fleet monitoring dashboard — CF + WPE + GA4/GSC across a WordPress fleet"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
